--- a/templates/students/department_list.html
+++ b/templates/students/department_list.html
@@ -15,9 +15,9 @@
     <table class="table">
       <thead>
         <tr>
-          <th scope="col">Название</th>
-          <th scope="col">Преподаватели</th>
-          <th scope="col">Действия</th>
+          <th style="width: 60%"  scope="col">Название</th>
+          <th style="width: 25%"  scope="col">Преподаватели</th>
+          <th style="width: 15%"  scope="col">Действия</th>
         </tr>
       </thead>
       <tbody>
