--- a/templates/students/student_list.html
+++ b/templates/students/student_list.html
@@ -15,12 +15,12 @@
     <table class="table">
       <thead>
         <tr>
-          <th scope="col">Фамилия</th>
-          <th scope="col">Имя</th>
-          <th scope="col">Отчество</th>
-          <th scope="col">Пол</th>
-          <th scope="col">Кафедра</th>
-          <th scope="col">Действия</th>
+          <th style="width: 20%" scope="col">Фамилия</th>
+          <th style="width: 15%" scope="col">Имя</th>
+          <th style="width: 20%" scope="col">Отчество</th>
+          <th style="width: 10%" scope="col">Пол</th>
+          <th style="width: 20%" scope="col">Кафедра</th>
+          <th style="width: 15" scope="col">Действия</th>
         </tr>
       </thead>
       <tbody>
