--- a/templates/students/teacher_list.html
+++ b/templates/students/teacher_list.html
@@ -5,22 +5,23 @@
 {% endblock %}
 
 {% block content %}
-  <h1>
-    {{ title }}
-    <a href="{% url 'students:teacher_create' %}" class="btn btn-success btn-lg">
-        Добавить преподавателя
-    </a>
-  </h1>
+  <div>
+    <h1>{{ title }}
+      <a href="{% url 'students:teacher_create' %}" class="btn btn-success btn-lg">
+          Добавить преподавателя
+      </a>
+    </h1>
+  </div>
   {% if teachers %}
     <table class="table">
       <thead>
         <tr>
-          <th scope="col">Фамилия</th>
-          <th scope="col">Имя</th>
-          <th scope="col">Отчество</th>
-          <th scope="col">Пол</th>
-          <th scope="col">Кафедры</th>
-          <th scope="col">Действия</th>
+          <th style="width: 20%"  scope="col">Фамилия</th>
+          <th style="width: 15%"  scope="col">Имя</th>
+          <th style="width: 20%"  scope="col">Отчество</th>
+          <th style="width: 10%"  scope="col">Пол</th>
+          <th style="width: 20%"  scope="col">Кафедры</th>
+          <th style="width: 15%"  scope="col">Действия</th>
         </tr>
       </thead>
       <tbody>
